--- a/backend/.env.example
+++ b/backend/.env.example
@@ -50,3 +50,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ADMIN_USER_NAME=
+ADMIN_USER_EMAIL=
+ADMIN_USER_PASSWORD=
