--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,11 +8,13 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
+        "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
+        "brianium/paratest": "^6.4",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
