--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.login=admin
 # must be unique in a given SonarQube instance
 sonar.projectKey=zacha:backend
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
@@ -6,7 +7,7 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
-sonar.sources=app, routes
+sonar.sources=app
 sonar.exclusions=app/Exceptions/, app/Providers/
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
