--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.14.0",
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29",
     "laravel-passport-session-store": "^1.0.2",
     "quasar": "^2.7.1",
     "vue": "^3.0.0",
