--- a/backend/.env.example
+++ b/backend/.env.example
@@ -54,3 +54,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 ADMIN_USER_NAME=
 ADMIN_USER_EMAIL=
 ADMIN_USER_PASSWORD=
+
+COMMON_USER_NAME=
+COMMON_USER_EMAIL=
+COMMON_USER_PASSWORD=
