--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.6",
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
     "autoprefixer": "^10.4.2",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-n": "^14.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.5.0",
+    "leaflet": "^1.8.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "vuex-persistedstate": "^4.1.0",
