--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,15 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "lint:fix": "eslint --ext .js,.vue ./ --fix",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "vitest",
+    "test:unit:ui": "majestic",
+    "test:unit": "jest --updateSnapshot",
+    "test:unit:ci": "jest --ci",
+    "test:unit:coverage": "jest --coverage",
+    "test:unit:watch": "jest --watch",
+    "test:unit:watchAll": "jest --watchAll",
+    "serve:test:coverage": "quasar serve test/jest/coverage/lcov-report/ --port 8788",
+    "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
     "@quasar/extras": "^1.15.5",
@@ -22,19 +30,26 @@
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.1.3",
+    "@quasar/babel-preset-app": "^2.0.1",
+    "@quasar/quasar-app-extension-testing": "^2.0.4",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-alpha.10",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
+    "@vue/test-utils": "^2.2.1",
     "autoprefixer": "^10.4.2",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
     "eslint-config-standard": "^17.0.0-1",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-n": "^14.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "leaflet": "^1.8.0",
+    "majestic": "^1.7.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
+    "vitest": "^0.24.5",
     "vuex-persistedstate": "^4.1.0",
     "vuex-router-sync": "^5.0.0",
     "workbox-build": "^6.5.0",
