--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,7 +13,8 @@
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
         "brianium/paratest": "^6.4",
