--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js,.vue ./",
     "lint:fix": "eslint --ext .js,.vue ./ --fix",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:unit:ui": "majestic",
     "test:unit": "jest --updateSnapshot",
     "test:unit:ci": "jest --ci",
@@ -19,46 +20,47 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.5",
-    "@vuelidate/core": "^2.0.0-alpha.41",
-    "@vuelidate/validators": "^2.0.0-alpha.29",
+    "@quasar/extras": "^1.15.8",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "laravel-passport-session-store": "^1.0.2",
-    "quasar": "^2.10.1",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0",
-    "vuex": "^4.0.1"
+    "quasar": "^2.11.2",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.1.3",
     "@quasar/babel-preset-app": "^2.0.1",
-    "@quasar/quasar-app-extension-testing": "^2.0.4",
-    "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-alpha.10",
+    "@quasar/quasar-app-extension-testing": "^2.0.6",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^3.0.0-beta.5",
+    "@vitest/coverage-c8": "^0.26.2",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
-    "@vue/test-utils": "^2.2.1",
-    "autoprefixer": "^10.4.2",
-    "date-fns": "^2.28.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.10.0",
-    "eslint-config-standard": "^17.0.0-1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^25.2.2",
+    "@vue/test-utils": "^2.2.6",
+    "autoprefixer": "^10.4.13",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.30.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^25.7.0",
     "eslint-plugin-n": "^14.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "leaflet": "^1.8.0",
-    "majestic": "^1.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^8.7.1",
+    "leaflet": "^1.9.3",
+    "majestic": "^1.8.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "vitest": "^0.24.5",
     "vuex-persistedstate": "^4.1.0",
     "vuex-router-sync": "^5.0.0",
-    "workbox-build": "^6.5.0",
-    "workbox-cacheable-response": "^6.5.0",
-    "workbox-core": "^6.5.0",
-    "workbox-expiration": "^6.5.0",
-    "workbox-precaching": "^6.5.0",
-    "workbox-routing": "^6.5.0",
-    "workbox-strategies": "^6.5.0"
+    "workbox-build": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
